# Zenith

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Dependencies.lua  README.md  premake5.lua
BuildSystem/CMake/CMakeUtils/: ZenithOptimization.cmake
Editor/: CMakeLists.txt
Editor/Source/: EditorLayer.cpp  EditorLayer.hpp  Zenith-Editor.cpp
Engine/: CMakeLists.txt
Engine/Source/: EntryPoint.hpp  Zenith.hpp  znpch.cpp  znpch.hpp
Engine/Source/Core/: Application.cpp  Application.hpp  Assert.hpp  Base.cpp  Base.hpp  Buffer.hpp  CMakeLists.txt  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  TimeStep.cpp  TimeStep.hpp  Version.hpp  Window.cpp  Window.hpp
Engine/Source/Embed/: ZenithIcon.embed
Engine/Source/Events/: ApplicationEvent.hpp  CMakeLists.txt  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/Source/Math/: CMakeLists.txt  Noise.cpp  Noise.hpp
Engine/Source/Platform/: CMakeLists.txt
Engine/Source/Platform/Windows/: WindowsFileSystem.cpp
Engine/Source/Utilities/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.hpp  FileSystem.cpp  FileSystem.hpp  StringUtils.cpp  StringUtils.hpp
ExampleApp/: premake5.lua
ExampleApp/ExampleApp/: ExampleApp.csproj
ExampleApp/src/: BasicController.cs  MapGenerator.cs  Noise.cs  PlayerCube.cs  RandomColor.cs  Script.cs  Sink.cs
Sandbox/: imgui.ini  premake5.lua
Sandbox/Resources/Models/m1911/: imgui.ini
Sandbox/Resources/Shaders/: EnvironmentIrradiance.glsl  EquirectangularToCubeMap.glsl  Grid.glsl  ZenithPBR_Anim.glsl  ZenithPBR_Static.glsl  hdr.glsl  quad.glsl  shader.glsl  simplepbr.glsl
Sandbox/Resources/Textures/cerberus/: imgui.ini
Sandbox/src/: Sandbox.cpp
Zenith/: premake5.lua
Zenith-Editor/: imgui.ini  premake5.lua
Zenith-Editor/Resources/Scenes/: Physics2DTest.zscene  PinkSunrise.zscene  StreamTestScene.zscene
Zenith-Editor/Resources/Shaders/: EnvironmentMipFilter.glsl  SceneComposite.glsl  ZenithPBR_Anim.glsl
Zenith-Editor/Source/: EditorLayer.cpp  EditorLayer.hpp  Zenith-Editor.cpp
Zenith-Editor/src/: EditorLayer.cpp  EditorLayer.hpp  Zenith-Editor.cpp
Zenith-ScriptCore/: premake5.lua
Zenith-ScriptCore/Zenith-ScriptCore/: Zenith-ScriptCore.csproj
Zenith-ScriptCore/src/Zenith/: Entity.cs  Input.cs  KeyCodes.cs  SpriteRenderer.cs
Zenith-ScriptCore/src/Zenith/Math/: Matrix4.cs  Noise.cs  Vector2.cs  Vector3.cs  Vector4.cs
Zenith-ScriptCore/src/Zenith/Renderer/: Color.cs  Material.cs  Mesh.cs  MeshFactory.cs  Texture2D.cs
Zenith-ScriptCore/src/Zenith/Scene/: Component.cs
Zenith/Platform/Linux/: LinuxFileSystem.cpp
Zenith/Platform/Windows/: WindowsFileSystem.cpp
Zenith/Source/: Zenith.hpp  znpch.cpp  znpch.hpp
Zenith/Source/Zenith/: EntryPoint.hpp
Zenith/Source/Zenith/Core/: Application.cpp  Application.hpp  Assert.hpp  Base.cpp  Base.hpp  Buffer.hpp  FatalSignal.cpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.hpp  Log.cpp  Log.hpp  LogCustomFormatters.hpp  Memory.cpp  Memory.hpp  Ref.hpp  TimeStep.hpp  Timer.hpp  UUID.cpp  UUID.hpp  Version.hpp  Window.cpp  Window.hpp
Zenith/Source/Zenith/Core/Events/: ApplicationEvent.hpp  KeyEvent.hpp  MouseEvent.hpp
Zenith/Source/Zenith/Core/Math/: AABB.hpp  Mat4.cpp  Ray.hpp
Zenith/Source/Zenith/Debug/: RenderDoc.hpp
Zenith/Source/Zenith/Editor/: EditorCamera.cpp  EditorCamera.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Zenith/Source/Zenith/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuizmo.cpp  ImGuizmo.h
Zenith/Source/Zenith/Platform/OpenGL/: OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.hpp  OpenGLShader.cpp  (+14 more)
Zenith/Source/Zenith/Renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Framebuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  Mesh.hpp  RenderCommandQueue.cpp  RenderCommandQueue.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.hpp  RendererCapabilities.hpp  RendererContext.cpp  RendererContext.hpp  RendererTypes.hpp  SceneRenderer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Zenith/Source/Zenith/Scene/: Components.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneSerializer.cpp
Zenith/Source/Zenith/Utilities/: FileSystem.cpp  FileSystem.hpp  StringUtils.cpp  StringUtils.hpp
Zenith/src/: Zenith.hpp  znpch.hpp
Zenith/src/Zenith/: EntryPoint.hpp
Zenith/src/Zenith/Core/: Application.cpp  Application.hpp  Assert.hpp  Base.cpp  Base.hpp  Buffer.hpp  FatalSignal.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  TimeStep.cpp  TimeStep.hpp  UUID.cpp  Version.hpp  Window.cpp  Window.hpp
Zenith/src/Zenith/Debug/: Profiler.hpp  RenderDoc.hpp
Zenith/src/Zenith/Editor/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Zenith/src/Zenith/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuizmo.cpp  ImGuizmo.h
Zenith/src/Zenith/Renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  RenderCommandQueue.cpp  RenderCommandQueue.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.hpp  SceneRenderer.cpp  SceneRenderer.hpp  Shader.cpp  Shader.hpp  ShaderUniform.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
Zenith/src/Zenith/Scene/: Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneCamera.hpp  SceneSerializer.cpp  SceneSerializer.hpp
Zenith/src/Zenith/Script/: ScriptEngine.cpp  ScriptEngine.hpp  ScriptEngineRegistry.cpp  ScriptEngineRegistry.hpp  ScriptWrappers.cpp  ScriptWrappers.hpp
scripts/: CheckPython.py  Linux-Build.sh  Linux-Fetch.sh  Linux-Run.sh  Setup.bat  Setup.py  Utils.py  Vulkan.py
(+26 files in other folders)
